<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="center">
        <!--android:weightSum="11.5"-->

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <Button
                android:id="@+id/oui_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:text="@string/oui"
                android:textStyle="bold"
                android:textSize="30dp"
                android:drawableLeft="@drawable/oui"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

            <Button
                android:id="@+id/non_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:text="@string/non"
                android:textStyle="bold"
                android:textSize="30dp"
                android:drawableLeft="@drawable/non"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/barre3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:text="@string/precision"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@color/barre2"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/garageBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:text="@string/garage"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/parkingBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:text="@string/parking"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="30dp"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/videSanitaireBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:text="@string/vide_sanitaire"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="30dp"/>

            <Button
                android:id="@+id/autreBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:text="@string/autre"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="30dp"
                />

        </LinearLayout>

    </LinearLayout>


    <EditText
        android:id="@+id/editSousS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/typeSousSol"
        android:gravity="left|center_vertical|"
        />


    <Button
        android:id="@+id/btnEtapeSuivante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0469BA"
        android:textColor="@android:color/white"
        android:text="@string/etapeSuivante"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_weight="4"/>

</LinearLayout>