<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <TextView
        android:id="@+id/titre_etape1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.75"
        android:text="@string/titre_etape1"
        android:background="@color/barre"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/sous_titre_etape1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@android:color/white"
        android:text="@string/sous_titre_etape1"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/formulaire_etape1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@android:color/white"
        android:text="@string/formulaire"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        />

    <Button
        android:id="@+id/suite_parcours"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@android:color/white"
        android:text="@string/suite_parcours"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3"
        android:background="@color/white"/>

    <Button
        android:id="@+id/btnEtapeSuivante"
        android:background="#0469BA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textColor="@android:color/white"
        android:text="SUIVANT"
        android:textStyle="bold"
        android:textSize="30dp"/>



</LinearLayout>