<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="11.5">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:id="@+id/interieurBtn"
                android:text="@string/interieur"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/logointerieur"
                />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:id="@+id/exterieurBtn"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/logoexterieur"
                android:text="@string/exterieur"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

    <Button
        android:id="@+id/btnEtapeSuivante"
        android:background="#0469BA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@android:color/white"
        android:text="@string/etapeSuivante"
        android:textStyle="bold"
        android:textSize="30dp"/>

</LinearLayout>
